# imprudence

linden/: install.xml
linden/indra/: CMakeLists.txt  develop.py
linden/indra/cmake/: 00-Common.cmake  CopyWinLibs.cmake  LLSD.cmake
linden/indra/llsd/: CMakeLists.txt  base64.cpp  base64.h  llidl.cpp  llidl.h  llsd.cpp  llsd.h  llsdserialize.h  llsdserialize_binary.cpp  llsdserialize_impl.cpp  llsdserialize_impl.h  llsdserialize_json.cpp  llsdserialize_notation.cpp  llsdserialize_xml.cpp  preprocessor.h  stdtypes.h  stub.cpp  stub.h
linden/indra/llsd/tests/: llidl_tests.cpp  llsd_tests.cpp  llsdserialize_tests.cpp  llsdtraits.h
linden/indra/llui/: lllineeditor.cpp
linden/indra/llvfs/: lldir_win32.cpp
linden/indra/media_plugins/: CMakeLists.txt
linden/indra/media_plugins/vlc/: CMakeLists.txt  media_plugin_vlc.cpp  media_plugin_vlc.h
linden/indra/newview/: CMakeLists.txt  llstartup.cpp  llviewermedia_streamingaudio.cpp  llviewerregion.cpp  viewer_manifest.py
linden/indra/newview/app_settings/: settings.xml
linden/indra/newview/skins/default/xui/en-us/: mime_types_windows.xml
linden/indra/slpluginBSD/: CMakeLists.txt  llplugininstance.cpp  llplugininstance.h  llpluginmessage.cpp  llpluginmessage.h  llpluginmessagepipe.cpp  llpluginmessagepipe.h  llpluginprocesschild.cpp  llpluginprocesschild.h  llpluginsharedmemory.cpp  llpluginsharedmemory.h  lltimer.cpp  lltimer.h  rccommon.h  slpluginBSD.cpp  slpluginBSD.h  stdtypes.h
